--- a/bash/Dockerfile
+++ b/bash/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:latest
 
+MAINTAINER Amir Mohtasebi <amir.mohtasebi@gmail.com>
+
 RUN apt-get update
-RUN apt-get -y install git curl vim
+RUN apt-get -y install git curl
 
 CMD ["/bin/bash"]
