compose build or image

--- a/mongo-composed/docker-compose.yml
+++ b/mongo-composed/docker-compose.yml
@@ -1,9 +1,11 @@
 # Composing a Mongo primary node with a linked volume container
 datacontainer:
+  #image: bashed
   build: ../bash
   volumes: 
     - /data/db:/data/db
 mongo:
+  #image: mongoed
   build: ../mongo
   ports:
     - "27017:27017"
