Add libreoffice on alpine for headless use

--- a/bash/Dockerfile
+++ b/bash/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
 
-MAINTAINER Amir Mohtasebi <amir.mohtasebi@gmail.com>
+LABEL maintainer="amir.mohtasebi@gmail.com"
 
 RUN apt-get update
 RUN apt-get -y install git curl
